--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -17,7 +17,7 @@
             <tr>
               <td>
                 {% if date %}
-                <span class="badge font-weight-bold danger-color-dark text-uppercase align-middle" style="min-width: 70px;">
+                <span class="badge font-weight-bold danger-color-dark text-uppercase align-left" style="min-width: 75px;">
                 {{date}}
                 </span>
                 {% endif %}
