--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -5,14 +5,14 @@ layout: default
 {% unless site.data.resume %}
 <div class="post align-items-center">
   <div class="cv">
-    <object data="../assets/pdf/cv.pdf" width="100%" height="80%" type='application/pdf'></object>
+    <object data="../assets/pdf/cv.pdf" width="100%" height="600px" type='application/pdf'></object>
   </div>
 
 </div>
 {% else %}
 <div class="post align-items-center">
   <div class="cv">
-    <object data="../assets/pdf/cv.pdf" width="100%" height="80%" type='application/pdf'></object>
+    <object data="../assets/pdf/cv.pdf" width="100%" height="600px" type='application/pdf'></object>
   </div>
 
 </div>
